--- a/package.json
+++ b/package.json
@@ -7,21 +7,62 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"./src/**/*.{ts,tsx}\" --config ./.prettierrc",
+    "router:gen": "tsr generate"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.9",
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/client-preset": "^4.1.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
+    "@graphql-codegen/typescript-react-apollo": "^4.1.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@szhsin/react-menu": "^4.1.0",
+    "@tanstack/react-query": "^5.17.15",
+    "@tanstack/react-router": "^1.5.2",
+    "@tanstack/router-cli": "^1.5.2",
+    "@tanstack/router-devtools": "^1.5.2",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
+    "framer-motion": "^10.18.0",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
+    "immer": "^10.0.3",
+    "js-cookie": "^3.0.5",
+    "lottie-react": "^2.4.0",
+    "path": "^0.12.7",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-paginate": "^8.2.0",
+    "react-query": "^3.39.3",
+    "styled-components": "^6.1.8",
+    "vite-tsconfig-paths": "^4.3.1",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@tanstack/router-vite-plugin": "^1.5.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
